--- a/11_settimana/Giorno_1/lazy/angular.json
+++ b/11_settimana/Giorno_1/lazy/angular.json
@@ -1,13 +1,27 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "f49e89d2-c06a-40de-a772-09ba583b8b81"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "soluzione2": {
+    "epicode-esercizi": {
       "projectType": "application",
       "schematics": {
+        
         "@schematics/angular:component": {
-          "style": "scss"
+          "inlineTemplate": true,
+          "inlineStyle": true,
+          "style": "scss",
+          "skipTests": true,
+          "flat": true
+        },
+        "@schematics/angular:directive": {
+          "skipTests": true
+        },
+        "@schematics/angular:application": {
+          "strict": true
         }
       },
       "root": "",
@@ -17,14 +31,11 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/soluzione2",
+            "outputPath": "dist/epicode-esercizi",
             "index": "src/index.html",
             "main": "src/main.ts",
-            "polyfills": [
-              "zone.js"
-            ],
+            "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
-            "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
               "src/assets"
@@ -48,6 +59,12 @@
                   "maximumError": "4kb"
                 }
               ],
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ],
               "outputHashing": "all"
             },
             "development": {
@@ -65,10 +82,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "soluzione2:build:production"
+              "browserTarget": "epicode-esercizi:build:production"
             },
             "development": {
-              "browserTarget": "soluzione2:build:development"
+              "browserTarget": "epicode-esercizi:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -76,18 +93,16 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "soluzione2:build"
+            "browserTarget": "epicode-esercizi:build"
           }
         },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "polyfills": [
-              "zone.js",
-              "zone.js/testing"
-            ],
+            "main": "src/test.ts",
+            "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.spec.json",
-            "inlineStyleLanguage": "scss",
+            "karmaConfig": "karma.conf.js",
             "assets": [
               "src/favicon.ico",
               "src/assets"
@@ -100,8 +115,5 @@
         }
       }
     }
-  },
-  "cli": {
-    "analytics": "f38b5d10-e49c-486a-bfaa-aaeda2add723"
   }
 }
